--- a/mail.html
+++ b/mail.html
@@ -1,5 +1,5 @@
 <!--
-Levidio Lorem Ipsum
+x Ipsum
 http://rootpixel.co.id/levidio/
 Template name: Software 2
 Order at: http://rootpixel.co.id/levidio/
