--- a/aplikasipwa.html
+++ b/aplikasipwa.html
@@ -394,14 +394,12 @@ Version : v1.0
 </div> <!-- end of basic-4 -->
 <!-- end of download -->
 <!-- Testimonial -->
-            <center><h2>Portofolio atau sample yang pernah dibuat</h2></center>
+            <center><h2>Kumpulan Desain Konten Instagram</h2></center>
             <br>
-            <center><p>Masih ada yang lain jika tertarik silahkan hubungi kami minta portofolio sesui dengan kebutuhan anda</p></center>
-            <center><img src="img/Slide1.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide2.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide3.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide4.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide5.png" alt="" class="premium--img"></center>
+            <center><img src="img/post1.jpg" alt="" class="premium--img"></center>
+            <center><img src="img/post2.png" alt="" class="premium--img"></center>
+            <center><img src="img/post3.png" alt="" class="premium--img"></center>
+            <center><img src="img/post4.png" alt="" class="premium--img"></center>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <br>
             <p></p>
