--- a/aplikasipwa.html
+++ b/aplikasipwa.html
@@ -397,11 +397,11 @@ Version : v1.0
             <center><h2>Portofolio atau sample yang pernah dibuat</h2></center>
             <br>
             <center><p>Masih ada yang lain jika tertarik silahkan hubungi kami minta portofolio sesui dengan kebutuhan anda</p></center>
-            <center><img src="img/Slide1.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide2.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide3.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide4.png" alt="" class="premium--img"></center>
-            <center><img src="img/Slide5.png" alt="" class="premium--img"></center>
+            <center><img src="img/Slide1.PNG" alt="" class="premium--img"></center>
+            <center><img src="img/Slide2.PNG" alt="" class="premium--img"></center>
+            <center><img src="img/Slide3.PNG" alt="" class="premium--img"></center>
+            <center><img src="img/Slide4.PNG" alt="" class="premium--img"></center>
+            <center><img src="img/Slide5.PNG" alt="" class="premium--img"></center>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <br>
             <p></p>
